--- a/v1/bricks/app_scaffold/brick.yaml
+++ b/v1/bricks/app_scaffold/brick.yaml
@@ -10,5 +10,5 @@ vars:
   project_name:
     type: string
     description: Name of your project
-    default: Brickman demo
+    default: brickman_demo
     prompt: Please enter the name of your project
