--- a/v1/bricks/app_scaffold/__brick__/.gitignore
+++ b/v1/bricks/app_scaffold/__brick__/.gitignore
@@ -45,3 +45,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+#ignore library pubspec.lock but keep root one
+/**/pubspec.lock
+!/pubspec.lock
